--- a/WebApplication1/Areas/coadmin/Views/comunicaciones/verblog.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/comunicaciones/verblog.cshtml
@@ -12,14 +12,29 @@
         background-color: #fff;
     }
 
+    .autor span {
+        float: right;
+        font-size: 16px;
+    }
+
     .fecha span {
         float: right;
         font-size: 16px;
+         color: cornflowerblue;
+    }
+
+    .encabezadoBlog  {
+        margin-bottom:3px;
+    }
+
+    .encabezadoBlog span {
+        float: right;
+        font-size: 14px;
         color: cornflowerblue;
     }
 
-    .page-content-wrapper{
-        margin-bottom: 10px!important;
+    .page-content-wrapper {
+        margin-bottom: 10px !important;
     }
 </style>
 
@@ -71,7 +86,7 @@
         </div>
 
         <div class="table-responsive">
-            <table id="dataTable-documentos-legales"
+            <table id="blogTable"
                    class="table table-striped table-bordered normal"
                    style="border-collapse: collapse; border-spacing: 0; width: 100%;">
                 <thead>
