--- a/WebApplication1/Areas/webmaster/Views/comunicaciones/blog.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/comunicaciones/blog.cshtml
@@ -52,7 +52,7 @@
                             </div>
                         </div>
                         <div class="table-responsive">
-                            <table id="dataTable-documentos-legales" class="table table-striped table-bordered normal"
+                            <table id="blogTable" class="table table-striped table-bordered normal"
                                    style="border-collapse: collapse; border-spacing: 0; width: 100%;">
                                 <thead>
                                     <tr>
@@ -97,167 +97,3 @@
     </div><!-- container -->
 
 </div> <!-- Page content Wrapper -->
-<script>
-
-    $(document).ready(function () {
-        $('#dataTable-directorio-suplidores').DataTable({
-            "aaSorting": [[2, "desc"]]
-        });
-
-    });
-</script>
-@*
-    <script>
-
-
-        console.log('@Model.Content');
-
-
-           var url = "@Url.Action("ArmarBlogs", "comunicaciones", new { area = "webmaster" })";
-         var compania = new Array();
-        var formData = new FormData();
-
-        formData.append('ID', '@Model.Content');
-
-        compania.push(formData);
-        $.ajax({
-            url: url,
-            type: "post",
-            data: compania[0],
-                    success: function (result) {
-                        $("#divContenido").append(result);
-                    },
-                    processData: false,
-                    contentType: false
-        });
-        //.ToString()
-
-
-
-        $(document).ready(function () {
-              $(".Eliminar").on('click', function () {
-                var url = "@Url.Action("eliminarBlog", "comunicaciones", new { area = "webmaster"})";
-                 var compania = new Array();
-              var formData = new FormData();
-
-
-                 var id = $(".Eliminar").attr('data-id');
-                formData.append('blogID',  id);
-
-                compania.push(formData);
-                $.ajax({
-                    url: url,
-                    type: "post",
-                    data: compania[0],
-                            success: function (result) {
-                                if (result.result == "success") {
-                                    location.reload();
-                                } else {
-                                    alert("Error al eliminar el blog: "+ result.exception);
-                                }
-                            },
-                            processData: false,
-                            contentType: false
-                });
-            });
-
-             $(".Like").on('click', function () {
-                var url = "@Url.Action("AgregarLikeblog", "comunicaciones", new { area = "webmaster" })";
-                 var compania = new Array();
-              var formData = new FormData();
-
-
-                 var id = $(".Like").attr('data-id');
-                formData.append('ID',  id);
-
-                compania.push(formData);
-                $.ajax({
-                    url: url,
-                    type: "post",
-                    data: compania[0],
-                            success: function (result) {
-                                //  $("#divContenido").append(result);
-                                console.log(result);
-                            },
-                            processData: false,
-                            contentType: false
-                });
-            });
-
-        });
-
-
-
-
-    </script>*@
-
-<!-- Page content Wrapper -->
-@*<div class="row">
-        <div class="col-12">
-            <div class="card">
-                <div class="card-body">
-                    <div class="row form-material">
-                        <div class="col-md-6">
-                            <h5 class="d-inline-block">Últimas entradas</h5>
-                        </div>
-                        <div class="col-md-6 mb-1">
-                            <a href="@Url.Action("agregarblog", "comunicaciones", new { area = "webmaster" })"><button type="button" class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left">Nueva entrada</button></a>
-                        </div>
-                    </div>
-                    <div class="table-responsive">
-                        <table id="dataTable-documentos-legales" class="table table-striped table-bordered normal"
-                               style="border-collapse: collapse; border-spacing: 0; width: 100%;">
-                            <thead>
-                                <tr>
-                                    <th>Título</th>
-                                    <th>Autora</th>
-                                    <th>Contenido</th>
-                                    <th>Fecha de publicación</th>
-                                    <th>Opciones</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                @foreach (var item in Model.blogList)
-                                {
-                                    <tr>
-                                        <td>@item.title</td>
-                                        <td>@item.author</td>
-                                        <td>@item.content.</td>
-                                        <td class="text-center">@Convert.ToDateTime(item.blogdate).ToString("MM/dd/yyyy HH:mm")</td>
-                                        <td class="text-center">
-                                            <a href="@Url.Action("verblog", "comunicaciones", new { blogID = item.id, area = "webmaster" })">
-                                                <button type="button" class="btn btn-success waves-effect waves-light btn-sm mr-1 mb-1"
-                                                        data-toggle="tooltip" data-placement="top" title="Ver">
-                                                    <i class="mdi mdi-eye"></i>
-                                                </button>
-                                            </a>
-                                            <a href="#">
-                                                <button type="button" class="btn btn-danger waves-effect waves-light btn-sm mb-1"
-                                                        onclick="onDeleteBlog(this)" data-id="@item.id"
-                                                        data-toggle="tooltip" data-placement="top" title="Eliminar-g">
-                                                    <i class="mdi mdi-delete"></i>
-                                                </button>
-
-                                            </a>
-
-                                        </td>
-                                    </tr>
-
-
-                                }
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>*@<!-- end row -->
-<!-- back button -->
-@*<div class="row pb-4">
-        <div class="col-md-6">
-            <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
-        </div>
-    </div>*@
-<!-- end back button -->
-@*</div>*@<!-- container -->
-@*</div>*@ <!-- Page content Wrapper -->
