--- a/WebApplication1/Views/comunicaciones/blog.cshtml
+++ b/WebApplication1/Views/comunicaciones/blog.cshtml
@@ -53,7 +53,7 @@
                             </div>
                         </div>
                         <div class="table-responsive">
-                            <table id="dataTable-documentos-legales" class="table table-striped table-bordered normal" 
+                            <table id="blogTable" class="table table-striped table-bordered normal"
                                    style="border-collapse: collapse; border-spacing: 0; width: 100%;">
                                 <thead>
                                     <tr>
@@ -64,7 +64,7 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    @foreach(var item in Model.blogList)
+                                    @foreach (var item in Model.blogList)
                                     {
                                         <tr>
                                             <td>@item.title</td>
