--- a/WebApplication1/Areas/coadmin/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/Shared/_Layout.cshtml
@@ -129,19 +129,21 @@
                         }
                         else
                         {
-                            <select class="form-control selectComunidad" onchange="ChangeCommunity(this)" name="communitySelect">
-                                @foreach (var item in Model.communityList)
+                    <div style="display:flex!important; justify-content:center!important">
+                        <select class="form-control selectComunidad" style="width:80%!important" onchange="ChangeCommunity(this)" name="communitySelect">
+                            @foreach (var item in Model.communityList)
+                            {
+                                if (Convert.ToInt64(Session["CURRENT_COMU"]) == item.id)
                                 {
-                                    if (Convert.ToInt64(Session["CURRENT_COMU"]) == item.id)
-                                    {
-                                        <option value="@item.id" selected>@item.first_name</option>
-                                    }
-                                    else
-                                    {
-                                        <option value="@item.id">@item.first_name</option>
-                                    }
+                                    <option value="@item.id" selected>@item.first_name</option>
                                 }
-                            </select>
+                                else
+                                {
+                                    <option value="@item.id">@item.first_name</option>
+                                }
+                            }
+                        </select>
+                    </div>
                         }
                         <p class="text-primary text-uppercase"><sub><i class="mdi mdi-checkbox-blank-circle"></i> Activo</sub></p>
                     </div>
@@ -990,6 +992,10 @@
         $(document).ready(function () {
             $('#blogTable').DataTable({
                 "order": [[2, "desc"]]
+            });
+
+             $('#tableComunities').DataTable({
+                "ordering": false
             });
         });
     </script>
