--- a/WebApplication1/Areas/coadmin/Views/titulares/listado.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/titulares/listado.cshtml
@@ -59,13 +59,24 @@
                                 <h5 class="d-inline-block">Listado</h5>
                             </div>
                             <div class="col-md-6 mb-1">
-                                <a href="@Url.Action("agregar", "titulares", new { area = "coadmin" })">
-                                    <button type="button"
-                                            class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left mr-1 mb-1">
-                                        Agregar nuevo
-                                    </button>
-                                </a>
-
+                                @if (Session["CURRENT_COMU"] != null)
+                                {
+                                    <a href="@Url.Action("agregar", "titulares", new { area = "coadmin" })">
+                                        <button type="button"
+                                                class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left mr-1 mb-1">
+                                            Agregar nuevo
+                                        </button>
+                                    </a>
+                                }
+                                else
+                                {
+                                    <a>
+                                        <button disabled type="button"
+                                                class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left mr-1 mb-1">
+                                            Agregar nuevo
+                                        </button>
+                                    </a>
+                                }
                                 <button class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left mr-1 mb-1"
                                         type="button" id="import_csv_btn">
                                     Importar
