--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -143,24 +143,26 @@ scratch. This page gets rid of all links and provides the needed markup only.
                         }
                         else
                         {
-                            <select class="form-control selectComunidad" id="cbCommunitySession" onchange="ChangeCommunity(this)" name="communitySelect">
-                                @foreach (var item in Model.communityList)
+                    <div style="display:flex!important; justify-content:center!important">
+                        <select class="form-control selectComunidad" style="width:80%!important" id="cbCommunitySession" onchange="ChangeCommunity(this)" name="communitySelect">
+                            @foreach (var item in Model.communityList)
+                            {
+                                if (Convert.ToInt64(Session["CURRENT_COMU"]) == item.id)
                                 {
-                                    if (Convert.ToInt64(Session["CURRENT_COMU"]) == item.id)
-                                    {
-                                        <option value="@item.id" selected>@item.first_name</option>
-                                    }
-                                    else
-                                    {
-                                        <option value="@item.id">@item.first_name</option>
-                                    }
+                                    <option value="@item.id" selected>@item.first_name</option>
                                 }
-                            </select>
-                        }
-                        <p class="text-primary text-uppercase"><sub><i class="mdi mdi-checkbox-blank-circle"></i> Activo</sub></p>
+                                else
+                                {
+                                    <option value="@item.id">@item.first_name</option>
+                                }
+                            }
+                        </select>
                     </div>
+                                }
+                                <p class="text-primary text-uppercase"><sub><i class="mdi mdi-checkbox-blank-circle"></i> Activo</sub></p>
+                            </div>
 
-                </div>
+                        </div>
 
                 <div id="sidebar-menu">
                     <ul>
@@ -752,6 +754,10 @@ scratch. This page gets rid of all links and provides the needed markup only.
             $('#blogTable').DataTable({
                 "order": [[2, "desc"]]
             });
+
+            $('#tableComunities').DataTable({
+                "ordering": false
+            });
         });
     </script>
 
@@ -991,7 +997,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
 
         //Cambiar idCommunity en la session
          function onChangeCommunity(id) {
-           // var id = $(self).data('id');
+           //var id = $(self).data('id');
             var formData = new FormData();
             formData.append('id', id);
             var url = "@Url.Action("ChangeCommunity", "control")";
