--- a/WebApplication1/Views/comunicaciones/blog.cshtml
+++ b/WebApplication1/Views/comunicaciones/blog.cshtml
@@ -49,7 +49,15 @@
                                 <h5 class="d-inline-block">Últimas entradas</h5>
                             </div>
                             <div class="col-md-6 mb-1">
+                                @if (Session["CURRENT_COMU"] != null)
+                                {
                                 <a href="@Url.Action("agregarblog", "comunicaciones")"><button type="button" class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left">Nueva entrada</button></a>
+                                }
+                                else
+                                {
+                                <a><button type="button" disabled class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left">Nueva entrada</button></a>
+                                }
+                                
                             </div>
                         </div>
                         <div class="table-responsive">
