--- a/WebApplication1/Views/control/community.cshtml
+++ b/WebApplication1/Views/control/community.cshtml
@@ -72,7 +72,7 @@
                             </div>
                         </div>
                         <div class="table-responsive">
-                            <table id="dataTable-directorio-suplidores" class="table table-striped table-bordered normal" style="border-collapse: collapse; border-spacing: 0; width: 100%;">
+                            <table id="tableComunities" class="table table-striped table-bordered normal" style="border-collapse: collapse; border-spacing: 0; width: 100%;">
                                 <thead>
                                     <tr>
                                         <th class="f-b">Comunidad</th>
@@ -95,7 +95,7 @@
                                             </a>                                           
                                         </td>
                                         <td>
-                                            @if (Model.communityID1 == item.id)
+                                            @if (Convert.ToInt64(Session["CURRENT_COMU"]) == item.id)
                                             {
                                                 <input class="form-control CommunitySession" onchange="ChangeCommunity(this)" type="checkbox" value="@item.id" checked />
                                             }
